Rebase latest common schema
